Hotfix for link
Fixed project link on home page
added scroll to top logic

--- a/index.html
+++ b/index.html
@@ -1139,8 +1139,9 @@ body {
     </div>
 </div>
         <div class="cta">
-            <p>Interested in more projects? <a href="projects.html" class="btn">View All Projects</a></p>
-        </div>
+			<p>Interested in more projects? <a href="#" class="btn" onclick="showSection('projects-page'); window.scrollTo(0, 0); return false;">View All Projects</a></p>
+		</div>
+
     </div>
 </div>
 
